refactor: Update input fields in index.html for breast cancer feature extraction
- Renamed input fields to include specific feature types (Mean, SE, Worst) for clarity.
- Adjusted input step values to a more precise range (0.0000001) for better accuracy in data entry.
- Added new input fields for additional features such as Texture, Perimeter, Area, Smoothness, Compactness, Concavity, Concave Points, Symmetry, and Fractal Dimension.

--- a/webapp/frontend/index.html
+++ b/webapp/frontend/index.html
@@ -60,56 +60,124 @@
           </p>
           <form id="breast-form" class="grid-form">
             <label>
-              Radius
-              <input type="number" step="0.01" name="radius" />
+              Radius (Mean)
+              <input type="number" step="0.0000001" name="radius_mean" />
             </label>
             <label>
-              Texture
-              <input type="number" step="0.01" name="texture" />
+              Radius (SE)
+              <input type="number" step="0.0000001" name="radius_se" />
             </label>
             <label>
-              Perimeter
-              <input type="number" step="0.01" name="perimeter" />
+              Radius (Worst)
+              <input type="number" step="0.0000001" name="radius_worst" />
             </label>
             <label>
-              Area
-              <input type="number" step="0.01" name="area" />
+              Texture (Mean)
+              <input type="number" step="0.0000001" name="texture_mean" />
             </label>
             <label>
-              Area (mean)
-              <input type="number" step="0.01" name="area_mean" />
+              Texture (SE)
+              <input type="number" step="0.0000001" name="texture_se" />
+            </label>
+            <label>
+              Texture (Worst)
+              <input type="number" step="0.0000001" name="texture_worst" />
+            </label>
+            <label>
+              Perimeter (Mean)
+              <input type="number" step="0.0000001" name="perimeter_mean" />
+            </label>
+            <label>
+              Perimeter (SE)
+              <input type="number" step="0.0000001" name="perimeter_se" />
+            </label>
+            <label>
+              Perimeter (Worst)
+              <input type="number" step="0.0000001" name="perimeter_worst" />
+            </label>
+            <label>
+              Area (Mean)
+              <input type="number" step="0.0000001" name="area_mean" />
             </label>
             <label>
               Area (SE)
-              <input type="number" step="0.01" name="area_se" />
+              <input type="number" step="0.0000001" name="area_se" />
             </label>
             <label>
-              Smoothness
-              <input type="number" step="0.001" name="smoothness" />
+              Area (Worst)
+              <input type="number" step="0.0000001" name="area_worst" />
             </label>
             <label>
-              Compactness
-              <input type="number" step="0.001" name="compactness" />
+              Smoothness (Mean)
+              <input type="number" step="0.0000001" name="smoothness_mean" />
             </label>
             <label>
-              Concavity
-              <input type="number" step="0.001" name="concavity" />
+              Smoothness (SE)
+              <input type="number" step="0.0000001" name="smoothness_se" />
             </label>
             <label>
-              Symmetry
-              <input type="number" step="0.001" name="symmetry" />
+              Smoothness (Worst)
+              <input type="number" step="0.0000001" name="smoothness_worst" />
             </label>
             <label>
-              Fractal Dimension
-              <input type="number" step="0.001" name="fractal_dimension" />
+              Compactness (Mean)
+              <input type="number" step="0.0000001" name="compactness_mean" />
             </label>
             <label>
-              Concave Points (mean)
-              <input type="number" step="0.001" name="concave_points_mean" />
+              Compactness (SE)
+              <input type="number" step="0.0000001" name="compactness_se" />
+            </label>
+            <label>
+              Compactness (Worst)
+              <input type="number" step="0.0000001" name="compactness_worst" />
+            </label>
+            <label>
+              Concavity (Mean)
+              <input type="number" step="0.0000001" name="concavity_mean" />
+            </label>
+            <label>
+              Concavity (SE)
+              <input type="number" step="0.0000001" name="concavity_se" />
+            </label>
+            <label>
+              Concavity (Worst)
+              <input type="number" step="0.0000001" name="concavity_worst" />
+            </label>
+            <label>
+              Concave Points (Mean)
+              <input type="number" step="0.0000001" name="concave_points_mean" />
             </label>
             <label>
               Concave Points (SE)
-              <input type="number" step="0.001" name="concave_points_se" />
+              <input type="number" step="0.0000001" name="concave_points_se" />
+            </label>
+            <label>
+              Concave Points (Worst)
+              <input type="number" step="0.0000001" name="concave_points_worst" />
+            </label>
+            <label>
+              Symmetry (Mean)
+              <input type="number" step="0.0000001" name="symmetry_mean" />
+            </label>
+            <label>
+              Symmetry (SE)
+              <input type="number" step="0.0000001" name="symmetry_se" />
+            </label>
+            <label>
+              Symmetry (Worst)
+              <input type="number" step="0.0000001" name="symmetry_worst" />
+            </label>
+            <label>
+              Fractal Dimension (Mean)
+              <input type="number" step="0.0000001" name="fractal_dimension_mean" />
+            </label>
+            <label>
+              Fractal Dimension (SE)
+              <input type="number" step="0.0000001" name="fractal_dimension_se" />
+            </label>
+            <label>
+              Fractal Dimension (Worst)
+              <input type="number" step="0.0000001" name="fractal_dimension_worst" />
             </label>
             <div class="actions span-2">
               <button type="reset" class="secondary">Clear</button>
