--- a/webapp/frontend/index.html
+++ b/webapp/frontend/index.html
@@ -54,132 +54,66 @@
 
         <article class="card">
           <h2>Breast Cancer Measurements</h2>
-          <p class="helper">
-            Provide the measurements you know. Leave blank fields empty—the model will work
-            with the provided values.
-          </p>
-          <form id="breast-form" class="grid-form">
-            <label>
-              Radius (Mean)
-              <input type="number" step="0.0000001" name="radius_mean" />
-            </label>
-            <label>
-              Radius (SE)
-              <input type="number" step="0.0000001" name="radius_se" />
-            </label>
-            <label>
-              Radius (Worst)
-              <input type="number" step="0.0000001" name="radius_worst" />
-            </label>
-            <label>
-              Texture (Mean)
-              <input type="number" step="0.0000001" name="texture_mean" />
-            </label>
-            <label>
-              Texture (SE)
-              <input type="number" step="0.0000001" name="texture_se" />
-            </label>
-            <label>
-              Texture (Worst)
-              <input type="number" step="0.0000001" name="texture_worst" />
-            </label>
-            <label>
-              Perimeter (Mean)
-              <input type="number" step="0.0000001" name="perimeter_mean" />
-            </label>
-            <label>
-              Perimeter (SE)
-              <input type="number" step="0.0000001" name="perimeter_se" />
-            </label>
-            <label>
-              Perimeter (Worst)
-              <input type="number" step="0.0000001" name="perimeter_worst" />
-            </label>
-            <label>
-              Area (Mean)
-              <input type="number" step="0.0000001" name="area_mean" />
-            </label>
-            <label>
-              Area (SE)
-              <input type="number" step="0.0000001" name="area_se" />
-            </label>
-            <label>
-              Area (Worst)
-              <input type="number" step="0.0000001" name="area_worst" />
-            </label>
-            <label>
-              Smoothness (Mean)
-              <input type="number" step="0.0000001" name="smoothness_mean" />
-            </label>
-            <label>
-              Smoothness (SE)
-              <input type="number" step="0.0000001" name="smoothness_se" />
-            </label>
-            <label>
-              Smoothness (Worst)
-              <input type="number" step="0.0000001" name="smoothness_worst" />
-            </label>
-            <label>
-              Compactness (Mean)
-              <input type="number" step="0.0000001" name="compactness_mean" />
-            </label>
-            <label>
-              Compactness (SE)
-              <input type="number" step="0.0000001" name="compactness_se" />
-            </label>
-            <label>
-              Compactness (Worst)
-              <input type="number" step="0.0000001" name="compactness_worst" />
-            </label>
-            <label>
-              Concavity (Mean)
-              <input type="number" step="0.0000001" name="concavity_mean" />
-            </label>
-            <label>
-              Concavity (SE)
-              <input type="number" step="0.0000001" name="concavity_se" />
-            </label>
-            <label>
-              Concavity (Worst)
-              <input type="number" step="0.0000001" name="concavity_worst" />
-            </label>
-            <label>
-              Concave Points (Mean)
-              <input type="number" step="0.0000001" name="concave_points_mean" />
-            </label>
-            <label>
-              Concave Points (SE)
-              <input type="number" step="0.0000001" name="concave_points_se" />
-            </label>
-            <label>
-              Concave Points (Worst)
-              <input type="number" step="0.0000001" name="concave_points_worst" />
-            </label>
-            <label>
-              Symmetry (Mean)
-              <input type="number" step="0.0000001" name="symmetry_mean" />
-            </label>
-            <label>
-              Symmetry (SE)
-              <input type="number" step="0.0000001" name="symmetry_se" />
-            </label>
-            <label>
-              Symmetry (Worst)
-              <input type="number" step="0.0000001" name="symmetry_worst" />
-            </label>
-            <label>
-              Fractal Dimension (Mean)
-              <input type="number" step="0.0000001" name="fractal_dimension_mean" />
-            </label>
-            <label>
-              Fractal Dimension (SE)
-              <input type="number" step="0.0000001" name="fractal_dimension_se" />
-            </label>
-            <label>
-              Fractal Dimension (Worst)
-              <input type="number" step="0.0000001" name="fractal_dimension_worst" />
-            </label>
-            <div class="actions span-2">
+          <div class="callout-box">
+            <div class="callout-icon">💡</div>
+            <div class="callout-content">
+              <p class="helper">
+                Provide the measurements you know. For trained model predictions (instead of heuristic fallback), 
+                please include at minimum: <strong>Area (Mean)</strong>, <strong>Area (SE)</strong>, 
+                <strong>Concave Points (Mean)</strong>, and <strong>Concave Points (SE)</strong>. 
+                Additional fields are optional but help improve accuracy.
+              </p>
+            </div>
+          </div>
+          <form id="breast-form" class="breast-form">
+            <!-- Recommended Fields (Required) -->
+            <div class="field-group">
+              <h3 class="field-group-title">Recommended</h3>
+              <div class="grid-form" id="recommended-fields">
+                <label>
+                  Area (Mean)
+                  <input type="number" step="0.0000001" name="area_mean" required />
+                </label>
+                <label>
+                  Area (SE)
+                  <input type="number" step="0.0000001" name="area_se" required />
+                </label>
+                <label>
+                  Concave Points (Mean)
+                  <input type="number" step="0.0000001" name="concave_points_mean" required />
+                </label>
+                <label>
+                  Concave Points (SE)
+                  <input type="number" step="0.0000001" name="concave_points_se" required />
+                </label>
+              </div>
+            </div>
+
+            <!-- Additional Fields Dropdown -->
+            <div class="field-selector">
+              <label class="selector-label">
+                Add more measurements (optional)
+                <input 
+                  type="text" 
+                  id="measurement-search" 
+                  placeholder="Search measurements..."
+                  class="measurement-search"
+                />
+              </label>
+              <div class="measurement-dropdown" id="measurement-dropdown">
+                <!-- Will be populated by JavaScript -->
+              </div>
+            </div>
+
+            <!-- Additional Fields Container -->
+            <div class="field-group" id="additional-fields-group" style="display: none;">
+              <h3 class="field-group-title">To improve accuracy, add more fields</h3>
+              <div class="grid-form" id="additional-fields">
+                <!-- Fields will be added here dynamically -->
+              </div>
+            </div>
+
+            <div class="actions">
               <button type="reset" class="secondary">Clear</button>
               <button type="submit">Analyze Measurements</button>
             </div>
